Сделал главную страницу и создание чата, также если ввести /chats/kkkkkkkk выйдут сообщения этого чата

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Чат Инкогнито</title>
-</head>
-<body>
-    {% for item in list_msg %}
+{% extends "base.html" %}
+
+{% block content %}
+<h2>Сообщения</h2>
+{% for item in list_msg %}
         <div class="message">{{ item }}</div>
     {% endfor %}
-</body>
-</html>
+{% endblock %}
