--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Создание чата</title>
-    <link rel="stylesheet"
-                    href="{url_for('static', filename='css/style.css')}">
-</head>
-<body>
-    <form>
-       <button>Создать чат</button>
-    </form>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+</form>
+{% endblock %}
