--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,8 +1,18 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block content %}
-<h2>Сообщения</h2>
-{% for item in list_msg %}
-        <div class="message">{{ item }}</div>
-    {% endfor %}
+    <h1>Сообщения</h1>
+    <div class="mb-1 container border border-3 rounded" style="height: 75%">
+        {% for item in list_msg %}
+            <h4 class="message rounded bg-info w-25 container" style="margin-top: 8px;padding-bottom: 5px;margin-left: 5px">{{ item }}</h4>
+        {% endfor %}
+    </div>
+    <form class="mb-3 " id="text_message">
+         {% for field in form %}
+            <div class="form-group">
+                {{if }}
+                    {{ field(class="form-control border border-2 rounded w-75") }}
+            </div>
+         {% endfor %}
+    </form>
 {% endblock %}
