--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 <form action="" method="post">
         {{ form.hidden_tag() }}
-        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        <p>{{ form.submit(type="submit", class="btn btn-primary position-absolute top-50 start-50 translate-middle") }}</p>
 </form>
 {% endblock %}
