--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,18 +2,18 @@
 
 {% block content %}
     <h1>Сообщения</h1>
-    <div class="mb-1 container border border-3 rounded" style="height: 75%">
-        {% for item in list_msg %}
-            <h4 class="message rounded bg-info w-25 container" style="margin-top: 8px;padding-bottom: 5px;margin-left: 5px">{{ item }}</h4>
-        {% endfor %}
-    </div>
-    <form class="mb-3 " id="text_message" action="" method="post">
+    <form class="mb-3 " id="text_message" action="" method="post" enctype="multipart/form-data">
+        <div class="mb-1 container border border-3 rounded" style="height: 75%">
+            {% for item in list_msg %}
+                <h4 class="message rounded bg-info w-25 container" style="margin-top: 8px;padding-bottom: 5px;margin-left: 5px">{{ item }}</h4>
+            {% endfor %}
+        </div>
             <p>
                 {{ form.text(class="form-control border border-2 rounded w-75") }}
             </p>
             <p>
                 {{ form.hidden_tag() }}
-                {{ form.submit(type="submit", class="btn btn-primary border border-2 rounded w-75") }}
+                {{ form.submit(type="submit", class="btn border border-2 rounded w-75") }}
             </p>
     </form>
 {% endblock %}
