--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
           crossorigin="anonymous">
+    <script type="text/javascript" src="https://yastatic.net/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>{{title}}</title>
 </head>
 <body>
