--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,13 +3,13 @@
 {% block content %}
     <h1>Сообщения</h1>
     <script>var chat_id = {{ chat_id }};</script>
-    <form class="mb-3 " id="text_message" action="" method="post" enctype="multipart/form-data">
-        <div id="chat_box" class="mb-1 container border border-3 rounded" style="height: 75%">
+<form class="chat_box" id="text_message" action="" method="post" enctype="multipart/form-data">
+        <div id="chat_box" class="mb-1 container border_color border border-3 rounded" style="height: 75%">
             {% for item in list_msg %}
                 {% if item[1] == "msg" %}
-                    <h4 class="message rounded bg-info w-25 container">{{ item[0] }}</h4>
+                    <h4 class="message rounded button_color w-25 container">{{ item[0] }}</h4>
                 {% elif item[1] == "img" %}
-                    <h4><img src="{{ item[0] }}" alt="кролик" class="message rounded bg-info w-25 container" style="margin-top: 8px;padding-bottom: 5px;margin-left: 5px"></h4>
+                    <h4><img src="{{ item[0] }}" alt="кролик" class="message rounded w-25  container bg-opacity-10"></h4>
                 {% endif %}
             {% endfor %}
         </div>
