--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <title>{{title}}</title>
 </head>
 <body>
-<main role="main" class="container">
+<main role="main">
     {% block content %}{% endblock %}
 </main>
 </body>
