--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,7 +6,7 @@
 <div class="footer">
         <table>
         <td>По всем вопросам обращайтесь в компанию ДЕД ПИХТО И Co.,</td>
-        <tr><td><img src="static/css/images/Logo1.png"></td></tr>
+        <tr><td><img src="/static/css/images/Logo1.png"></td></tr>
         <tr><td>где на вас скорее всего забьют спустя секунду.</td></tr>
         <tr><td>Телефон: какие-то 11 цифр</td></tr>
         <tr><td>И ещё: все права не защищены.</td></tr>
@@ -18,7 +18,7 @@
                 {% if item[1] == "msg" %}
                     <h4 class="message rounded button_color w-25 container">{{ item[0] }}</h4>
                 {% elif item[1] == "img" %}
-                    <h4><img src="{{ item[0] }}" alt="кролик" class="message rounded w-25  container bg-opacity-10"></h4>
+                    <h4><img src="{{ item[0] }}" alt="" class="message rounded w-25 container bg-opacity-10"></h4>
                 {% endif %}
             {% endfor %}
         </div>
