--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,36 +3,31 @@
 {% block content %}
     <h1>Сообщения</h1>
     <script>var chat_id = {{ chat_id }};</script>
-<div class="footer">
-        <table>
-        <td>По всем вопросам обращайтесь в компанию ДЕД ПИХТО И Co.,</td>
-        <tr><td><img src="/static/css/images/Logo1.png"></td></tr>
-        <tr><td>где на вас скорее всего забьют спустя секунду.</td></tr>
-        <tr><td>Телефон: какие-то 11 цифр</td></tr>
-        <tr><td>И ещё: все права не защищены.</td></tr>
-        </table>
-</div>
-<form class="chat_box" id="text_message" action="" method="post" enctype="multipart/form-data">
+    <div class="footer">
+            <table>
+            <td>Создано компанией freedoMaster comp.</td>
+            </table>
+    </div>
+    <form class="chat_box" id="text_message" action="" method="post" enctype="multipart/form-data">
         <div id="chat_box" class="mb-1 container border_color border border-3 rounded" style="height: 75%">
             {% for item in list_msg %}
                 {% if item[1] == "msg" %}
-                    <h4 class="message rounded button_color w-25 container">{{ item[0] }}</h4>
+                    <h4 class="message rounded bg-light w-25 container">{{ item[0] }}</h4>
                 {% elif item[1] == "img" %}
-                    <h4><img src="{{ item[0] }}" alt="" class="message rounded w-25 container bg-opacity-10"></h4>
+                    <h4><img src="{{ item[0] }}" alt="" class="message rounded w-25 container"></h4>
                 {% endif %}
             {% endfor %}
         </div>
             <p>
-                {{ form.text(class="form-control border border-2 rounded w-75") }}
+                {{ form.text(class="textar form-control border border-2 rounded w-75") }}
             </p>
             <p>
-                {{ form.pic(class="form-control border border-2 rounded w-75")}}
+                {{ form.pic(class="picar form-control border border-2 rounded w-75")}}
             </p>
             <p>
                 {{ form.hidden_tag() }}
-                {{ form.submit(type="submit", class="btn border border-2 rounded w-75") }}
+                {{ form.submit(type="submit", class="btnar btn border border-2 rounded w-75") }}
             </p>
-<!--            <p><img src="{{ url_for('static', filename='img/BRUH.jpg') }}" alt="кролик" class="message rounded bg-info w-25 container" style="margin-top: 8px;padding-bottom: 5px;margin-left: 5px"></p>-->
     </form>
     <script src="{{ url_for('static', filename='script/script.js') }}"></script>
 {% endblock %}
