--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,6 @@
 </div>
 <form action="" method="post">
         {{ form.hidden_tag() }}
-        <p>{{ form.submit(type="submit", class="btn btn-primary position-absolute top-50 start-50 translate-middle") }}</p>
+        <p>{{ form.submit(type="submit", class="btn button_color position-absolute top-50 start-50 translate-middle") }}</p>
 </form>
 {% endblock %}
